--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
-  <script type="text/javascript" src="{{url_for('static', filename='sort.js')}}"></script>
-</head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="{{ url_for('index') }}">Home</a></li>
-      <li><a href="{{ url_for('articulos') }}">Articulos</a></li>
-    </ul>
-  </nav>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</body>
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+      <link rel="stylesheet" href="{{ url_for('static',filename='styles/style.css') }}">
+      <script type="text/javascript" src="{{url_for('static', filename='sort.js')}}"></script>
+      <link rel="icon" href="{{ url_for('static',filename='Beef&Fish.png') }}">
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="{{ url_for('index') }}">Home</a></li>
+        <li><a href="{{ url_for('articulos') }}">Articulos</a></li>
+      </ul>
+    </nav>
+    {% for message in get_flashed_messages() %}
+      <div class="flash">{{ message }}</div>
+    {% endfor %}
+    {% block content %}{% endblock %}
+  </body>
 </html>
 
